--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "conectaSaude",
-  "version": "0.0.1",
+  "name": "takere-app",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "android": "react-native run-android",
