--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.7.2",
     "react-native-svg": "^12.1.1",
+    "react-native-vector-icons": "^9.2.0",
     "react-native-webview": "^11.13.1",
     "styled-components": "^5.3.1",
     "styled-system": "^5.1.5"
