--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-native-svg": "^12.1.1",
     "react-native-vector-icons": "^9.2.0",
     "react-native-webview": "^11.13.1",
+    "rn-tooltip": "^3.0.2",
     "styled-components": "^5.3.1",
     "styled-system": "^5.1.5"
   },
