--- a/app.json
+++ b/app.json
@@ -1,4 +1,4 @@
 {
-  "name": "conectaSaude",
-  "displayName": "conectaSaude"
+  "name": "Takere - Patient",
+  "displayName": "Takere - Patient"
 }
