--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-native-community/async-storage": "^1.12.1",
+    "@react-native/normalize-color": "^2.0.0",
     "@react-navigation/native": "^6.0.4",
     "@react-navigation/native-stack": "^6.2.1",
     "axios": "^0.21.4",
@@ -22,12 +23,12 @@
     "react-native-i18n": "^2.0.15",
     "react-native-modalize": "^2.0.8",
     "react-native-render-html": "^6.3.4",
-    "react-native-safe-area-context": "^3.3.2",
-    "react-native-screens": "^3.7.2",
-    "react-native-svg": "^12.1.1",
+    "react-native-safe-area-context": "^4.4.1",
+    "react-native-screens": "^3.18.2",
+    "react-native-svg": "^13.4.0",
     "react-native-vector-icons": "^9.2.0",
-    "react-native-webview": "^11.13.1",
-    "rn-tooltip": "^3.0.2",
+    "react-native-webview": "^11.23.1",
+    "rn-tooltip": "^3.0.3",
     "styled-components": "^5.3.1",
     "styled-system": "^5.1.5"
   },
