--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -26,3 +26,10 @@ android.enableJetifier=true
 
 # Version of flipper SDK to use with React Native
 FLIPPER_VERSION=0.93.0
+
+org.gradle.jvmargs=-Xmx4608m
+
+TAKERE_PATIENT_UPLOAD_STORE_FILE=takere-patient.keystore
+TAKERE_PATIENT_UPLOAD_KEY_ALIAS=takere-patient
+TAKERE_PATIENT_UPLOAD_STORE_PASSWORD=
+TAKERE_PATIENT_UPLOAD_KEY_PASSWORD=
