--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -147,6 +147,14 @@ android {
             keyAlias 'androiddebugkey'
             keyPassword 'android'
         }
+        release {
+            if (project.hasProperty('TAKERE_PATIENT_UPLOAD_STORE_FILE')) {
+                storeFile file(TAKERE_PATIENT_UPLOAD_STORE_FILE)
+                storePassword TAKERE_PATIENT_UPLOAD_STORE_PASSWORD
+                keyAlias TAKERE_PATIENT_UPLOAD_KEY_ALIAS
+                keyPassword TAKERE_PATIENT_UPLOAD_KEY_PASSWORD
+            }
+        }
     }
     buildTypes {
         debug {
@@ -155,7 +163,7 @@ android {
         release {
             // Caution! In production, you need to generate your own keystore file.
             // see https://reactnative.dev/docs/signed-apk-android.
-            signingConfig signingConfigs.debug
+            signingConfig signingConfigs.release
             minifyEnabled enableProguardInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
         }
